New column Clients in the quotes table

--- a/system/app/Widgets/Quote/views/grid.quote.phtml
+++ b/system/app/Widgets/Quote/views/grid.quote.phtml
@@ -2,8 +2,9 @@
 <script type="text/template" id="quote-grid-row">
     <td><input type="checkbox" class="quote-grid-row-checkbox" id="<%= id %>" <% if (this.model.get('checked')) {%>checked="checked"<% }%> /></td>
     <td><%= id %></td>
+    <td><%= (userId !== null) ? ownerName : "<?php echo $this->translate('Not set'); ?>" %></td>
     <td><a target="_blank" href="<%= $('#website_url').val() + id %>.html"><%= title %></a></td>
-    <td><%= (ownerName != null) ? ownerName : "<?php echo $this->translate('unknown'); ?>" %></td>
+    <td><%= (userId != null) ? "<?php echo Tools_Security_Acl::ROLE_SUPERADMIN; ?>" :  ownerName  %></td>
     <td><%= $.datepicker.formatDate('dd-M-yy', new Date(Date.parse(createdAt.replace(/\-/g, '/')))) %></td>
     <td>
         <select name="quoteStatus" class="quote-status" id="<%= id %>">
@@ -31,13 +32,14 @@
         <table id="quote-grid-quotes" class="widget">
             <thead>
                 <tr class="search-line">
-                    <th class="gray-bg" colspan="8"><label><?php echo $this->translate('Search');?></label><?php echo $this->formText('search', '', array('id' => 'quote-grid-search', 'placeholder' => $this->translate('search quote by title, by creator'))); ?></th>
+                    <th class="gray-bg" colspan="9"><label><?php echo $this->translate('Search');?></label><?php echo $this->formText('search', '', array('id' => 'quote-grid-search', 'placeholder' => $this->translate('search quote by title, by creator'))); ?></th>
                 </tr>
                 <tr>
                     <th><input type="checkbox" id="quote-grid-select-all" /></th>
                     <th data-sort="id" class="sortable"><?php echo $this->translate('Id'); ?></th>
+                    <th data-sort="clients" class="sortable"><?php echo $this->translate('Client'); ?></th>
                     <th data-sort="title" class="sortable"><?php echo $this->translate('Title'); ?></th>
-                    <th data-sort="ownerName" class="sortable"><?php echo $this->translate('Owner'); ?>
+                    <th data-sort="ownerName" class="sortable"><?php echo $this->translate('Owner'); ?></th>
                     <th data-sort="created_at" class="sortable"><?php echo $this->translate('Date'); ?></th>
                     <th data-sort="status" class="sortable"><?php echo $this->translate('Status'); ?></th>
                     <th><?php echo $this->translate('Preview'); ?></th>
@@ -45,7 +47,7 @@
                 </tr>
             </thead>
             <tbody>
-                <td colspan="8">
+                <td colspan="9">
                     <?php if(isset($this->quotes['total']) && ($this->quotes['total'] > 0)): ?>
                         <img src="<?php echo $this->websiteUrl;?>plugins/quote/web/images/spinner.gif" border="0" alt="loading..." />
                     <?php else: ?>
@@ -57,14 +59,14 @@
             <tfoot>
                 <tfoot>
                 <tr>
-                    <td colspan="3" class="text-left">
+                    <td colspan="2" class="text-left">
     					<?php echo $this->translate('With selected'); ?>
                         <?php echo $this->formSelect('withSelected', $this->translate('select an action'), array('id' => 'batch-action'), array(
                             '0'      => $this->translate('select an action'),
                             'remove' => $this->translate('Remove'),
                         )); ?>
     				</td>
-                    <td class="pager" colspan="5"></td>
+                    <td class="pager" colspan="7"></td>
                 </tr>
             </tfoot>
             </tfoot>
