--- a/system/views/product.quote.phtml
+++ b/system/views/product.quote.phtml
@@ -1,19 +1,18 @@
 <?php
-    $this->placeholder('headerContent')->set($this->translate('Select 1 or more products&nbsp|&nbsp;Search').': ' . $this->formText('search', '', array('placeholder' => $this->translate('search products'))));
     $this->placeholder('extraClasses')->set('refreshOnClose');
     $this->placeholder('containerId')->set('products-container');
 ?>
-<div class="mt5px"></div>
-<div id="products" class="grid_12"></div>
-<div class="grid_12 mt5px">
-    <button class="add-products icon-save" id="save-btn"><?php echo $this->translate('Add products and close'); ?></button>
+<div id="products" class="content-footer scroll pl2 pr2">
+</div>
+<div class="footer grid_12">
+    <button id="save-btn" class="add-products icon-save"><?php echo $this->translate('Add products and close'); ?></button>
+    <p class="message info grid_4 pt0px pb0px alpha"><i class="icon-info-sign"></i> <?php echo $this->translate('Select 1 or more products&nbsp'); ?></p>
 </div>
 <?php
         $this->headScript()->setAllowArbitraryAttributes(true)
             ->appendFile($this->websiteUrl . 'plugins/shopping/web/js/libs/require.min.js', null, array('data-main' => $this->websiteUrl . 'plugins/quote/web/js/product.js'))
             ->appendFile($this->websiteUrl . 'system/js/external/jquery/plugins/lazyload/jquery.lazyload.min.js');
         echo $this->headScript();
-        echo $this->headLink()->appendStylesheet($this->websiteUrl . 'plugins/quote/web/css/add.products.quote.css');
 ?>
 
 
