--- a/web/js/modules/product/templates/productItem.html
+++ b/web/js/modules/product/templates/productItem.html
@@ -1,5 +1,5 @@
-<p class="brand"><%= brand %></p>
-<img class="lazy" src="<%= $('#website_url').val() %><% if (photo) { %>media/<%= photo.replace('/', '/product/') %> <% } else { %>'system/images/noimage.png' <% } %>" data-original="<%= $('#website_url').val() %><% if (photo) { %>media/<%= photo.replace('/', '/product/') %> <% } else { %>'system/images/noimage.png' <% } %>" alt="<%= name %>" />
-<p class="name"><%= name %></p>
-<p class="sku"><%= sku %></p>
-<p><input type="checkbox" data-pid="<%= id %>" <% if((typeof (checked) != 'undefined') && checked) { %> checked="checked" <% } %> class="in-quote"/></p>
+<span class="brand"><%= brand %></span>
+<span class="image"><img class="lazy" src="<%= $('#website_url').val() %><% if (photo) { %>media/<%= photo.replace('/', '/product/') %> <% } else { %>'system/images/noimage.png' <% } %>" data-original="<%= $('#website_url').val() %><% if (photo) { %>media/<%= photo.replace('/', '/product/') %> <% } else { %>'system/images/noimage.png' <% } %>" alt="<%= name %>" /></span>
+<span class="name"><%= name %></span>
+<span class="sku"><%= sku %></span>
+<label class="checkbox-del"><input type="checkbox" data-pid="<%= id %>" <% if((typeof (checked) != 'undefined') && checked) { %> checked="checked" <% } %> class="in-quote"/><span class="checkbox_radio"></span></label>
