--- a/system/app/Widgets/Quote/views/grid.quote.phtml
+++ b/system/app/Widgets/Quote/views/grid.quote.phtml
@@ -15,7 +15,7 @@
         </select>
     </td>
     <td><a target="_blank" href="<%= $('#website_url').val() + id %>.html?mode=preview"><?php echo $this->translate('Preview');?></a></td>
-    <td><a href="javascript:;" class="quote-grid-delete" data-sid="<%= id %>"><img src="<%= $('#website_url').val() %>system/images/delete.png" alt="delete"/></a></td>
+    <td class="text-center"><a href="javascript:;" class="quote-grid-delete" data-sid="<%= id %>"><img src="<%= $('#website_url').val() %>system/images/delete.png" alt="delete"/></a></td>
 </script>
 <!-- /quote grid row template -->
 <input type="hidden" name="system-language" value="<?php echo Tools_Misc::getJsTranslationLanguage();?>"/>
@@ -27,12 +27,15 @@
     <div id="quote-grid">
         <div class="quote-grid-block" id="quote-grid-top">
             <?php //echo $this->formText('search', '', array('id' => 'quote-grid-search', 'placeholder' => $this->translate('search quote by title'))); ?>
-            <a class="quote-grid-add btn-text fl-right mb7px" href="javascript:;" title="<?php echo $this->translate('Add new quote');?>"><?php echo $this->translate('Add new quote');?></a>
+            <a class="quote-grid-add btn green fl-right icon-plus" href="javascript:;" title="<?php echo $this->translate('Add new quote');?>"><?php echo $this->translate('Add new quote');?></a>
         </div>
         <table id="quote-grid-quotes" class="widget">
             <thead>
                 <tr class="search-line">
-                    <th class="gray-bg" colspan="9"><label><?php echo $this->translate('Search');?></label><?php echo $this->formText('search', '', array('id' => 'quote-grid-search', 'placeholder' => $this->translate('search quote by title, by creator, by client email & name'))); ?></th>
+                    <th colspan="9">
+                        <?php echo $this->formText('search', '', array('id' => 'quote-grid-search', 'placeholder' => $this->translate('search quote by title, by creator, by client email & name'))); ?>
+                        <label class="hidden"><?php echo $this->translate('Search');?></label>
+                    </th>
                 </tr>
                 <tr>
                     <th><input type="checkbox" id="quote-grid-select-all" /></th>
@@ -43,11 +46,11 @@
                     <th data-sort="created_at" class="sortable"><?php echo $this->translate('Date'); ?></th>
                     <th data-sort="status" class="sortable"><?php echo $this->translate('Status'); ?></th>
                     <th><?php echo $this->translate('Preview'); ?></th>
-                    <th><?php echo $this->translate('Remove'); ?></th>
+                    <th class="text-center"><?php echo $this->translate('Remove'); ?></th>
                 </tr>
             </thead>
             <tbody>
-                <td colspan="9">
+                <td class="text-center" colspan="9">
                     <?php if(isset($this->quotes['total']) && ($this->quotes['total'] > 0)): ?>
                         <img src="<?php echo $this->websiteUrl;?>plugins/quote/web/images/spinner.gif" border="0" alt="loading..." />
                     <?php else: ?>
