--- a/system/views/settings.quote.phtml
+++ b/system/views/settings.quote.phtml
@@ -6,7 +6,7 @@
 </div>
 <script type="text/javascript">
 $(document).ready(function(){
-    checkboxRadio();
+    checkboxRadioStyle();
 
     $(document).on("click", "#applySettings", function(e){
           e.preventDefault();
