--- a/system/app/Widgets/Quote/views/grid.quote.phtml
+++ b/system/app/Widgets/Quote/views/grid.quote.phtml
@@ -1,6 +1,6 @@
 <!-- quote grid row template -->
 <script type="text/template" id="quote-grid-row">
-    <td><input type="checkbox" class="quote-grid-row-checkbox" id="<%= id %>" <% if (this.model.get('checked')) {%>checked="checked"<% }%> /></td>
+    <td class="align-middle"><input type="checkbox" class="quote-grid-row-checkbox" id="<%= id %>" <% if (this.model.get('checked')) {%>checked="checked"<% }%> /></td>
     <td><%= id %></td>
     <td><%= (creatorId == 0) ? ownerName : (customerName === '') ? "<?php echo $this->translate('Not set'); ?>" : customerName %></td>
     <td><a target="_blank" href="<%= $('#website_url').val() + id %>.html"><%= title %></a></td>
@@ -15,7 +15,7 @@
         </select>
     </td>
     <td><a target="_blank" href="<%= $('#website_url').val() + id %>.html?mode=preview"><?php echo $this->translate('Preview');?></a></td>
-    <td class="text-center"><a href="javascript:;" class="quote-grid-delete" data-sid="<%= id %>"><img src="<%= $('#website_url').val() %>system/images/delete.png" alt="delete"/></a></td>
+    <td class="text-center"><a href="javascript:;" class="quote-grid-delete icon18 icon-cancel red" data-sid="<%= id %>">Delete</a></td>
 </script>
 <!-- /quote grid row template -->
 <input type="hidden" name="system-language" value="<?php echo Tools_Misc::getJsTranslationLanguage();?>"/>
@@ -25,19 +25,13 @@
 
 <?php if(Tools_Security_Acl::isAllowed(Tools_Security_Acl::RESOURCE_PLUGINS)): ?>
     <div id="quote-grid">
-        <div class="quote-grid-block" id="quote-grid-top">
-            <?php //echo $this->formText('search', '', array('id' => 'quote-grid-search', 'placeholder' => $this->translate('search quote by title'))); ?>
+        <div id="quote-grid-top" class="quote-grid-block mt20px mb20px clearfix">
+            <?php echo $this->formText('search', '', array('id' => 'quote-grid-search','class' => 'grid_6 alpha', 'placeholder' => $this->translate('search quote by title, by creator, by client email & name'))); ?>
             <a class="quote-grid-add btn green fl-right icon-plus" href="javascript:;" title="<?php echo $this->translate('Add new quote');?>"><?php echo $this->translate('Add new quote');?></a>
         </div>
-        <table id="quote-grid-quotes" class="widget">
+        <table id="quote-grid-quotes" class="widget table-hover">
             <thead>
-                <tr class="search-line">
-                    <th colspan="9">
-                        <?php echo $this->formText('search', '', array('id' => 'quote-grid-search', 'placeholder' => $this->translate('search quote by title, by creator, by client email & name'))); ?>
-                        <label class="hidden"><?php echo $this->translate('Search');?></label>
-                    </th>
-                </tr>
-                <tr>
+                <tr class="ws-nowrap">
                     <th><input type="checkbox" id="quote-grid-select-all" /></th>
                     <th data-sort="id" class="sortable"><?php echo $this->translate('Id'); ?></th>
                     <th data-sort="clients" class="sortable"><?php echo $this->translate('Client'); ?></th>
@@ -60,18 +54,16 @@
                 </td>
             </tbody>
             <tfoot>
-                <tfoot>
                 <tr>
-                    <td colspan="2" class="text-left">
+                    <td colspan="2">
     					<?php echo $this->translate('With selected'); ?>
                         <?php echo $this->formSelect('withSelected', $this->translate('select an action'), array('id' => 'batch-action'), array(
                             '0'      => $this->translate('select an action'),
                             'remove' => $this->translate('Remove'),
                         )); ?>
     				</td>
-                    <td class="pager" colspan="7"></td>
+                    <td class="pager text-right" colspan="7"></td>
                 </tr>
-            </tfoot>
             </tfoot>
         </table>
     </div>
