Added header for internalnote widget

--- a/system/app/Widgets/Quote/views/internalnote.quote.phtml
+++ b/system/app/Widgets/Quote/views/internalnote.quote.phtml
@@ -1,3 +1,4 @@
+{$header:internalnote:static}
 <?php echo $this->formTextarea('internalnote', html_entity_decode($this->content), array('class' => 'quote-internalnote')); ?>
 <script>
     $(function() {
