--- a/system/views/layout.phtml
+++ b/system/views/layout.phtml
@@ -2,7 +2,9 @@
 <!--[if IE 7 ]><html class="ie ie7" lang="<?php echo $this->htmlLang; ?>"> <![endif]-->
 <!--[if IE 8 ]><html class="ie ie8" lang="<?php echo $this->htmlLang; ?>"> <![endif]-->
 <!--[if IE 9 ]><html class="ie ie9" lang="<?php echo $this->htmlLang; ?>"> <![endif]-->
-<!--[if !(IE)]><!--> <html lang="<?php echo $this->htmlLang; ?>"> <!--<![endif]-->
+<!--[if !(IE)]><!-->
+<html lang="<?php echo $this->htmlLang; ?>">
+<!--<![endif]-->
     <head>
 	    <?php
 		    $this->headMeta()->setCharset('UTF-8');
@@ -13,6 +15,7 @@
 	        $this->headLink()
                 ->prependStylesheet($this->websiteUrl . 'plugins/shopping/web/css/store.css')
                 ->prependStylesheet($this->websiteUrl . 'system/css/seotoaster.css')
+                ->prependStylesheet($this->websiteUrl . 'system/css/seotoaster-ui.css')
                 ->prependStylesheet($this->websiteUrl . 'system/css/reset.css');
             echo $this->headLink();
 	        echo $this->headStyle();
