Fix button style

--- a/system/views/product.quote.phtml
+++ b/system/views/product.quote.phtml
@@ -5,7 +5,7 @@
 <div id="products" class="content-footer scroll pl2 pr2">
 </div>
 <div class="footer grid_12">
-    <button id="save-btn" class="add-products icon-save"><?php echo $this->translate('Add products and close'); ?></button>
+    <button id="save-btn" class="btn add-products icon-save"><?php echo $this->translate('Add products and close'); ?></button>
     <p class="message info grid_4 pt0px pb0px alpha"><i class="icon-info-sign"></i> <?php echo $this->translate('Select 1 or more products&nbsp'); ?></p>
 </div>
 <?php
