--- a/system/views/product.quote.phtml
+++ b/system/views/product.quote.phtml
@@ -5,8 +5,8 @@
 <div id="products" class="content-footer scroll pl2 pr2">
 </div>
 <div class="footer grid_12">
-    <button id="save-btn" class="btn add-products icon-save"><?php echo $this->translate('Add products and close'); ?></button>
-    <p class="message info grid_4 pt0px pb0px alpha"><i class="icon-info-sign"></i> <?php echo $this->translate('Select 1 or more products&nbsp'); ?></p>
+    <button id="save-btn" class="btn add-products ticon-save"><?php echo $this->translate('Add products and close'); ?></button>
+    <p class="message info grid_4 pt0px pb0px alpha"><i class="ticon-info-sign"></i> <?php echo $this->translate('Select 1 or more products&nbsp'); ?></p>
 </div>
 <?php
         $this->headScript()->setAllowArbitraryAttributes(true)
