Fix add product on quote page

--- a/system/views/product.quote.phtml
+++ b/system/views/product.quote.phtml
@@ -2,7 +2,7 @@
     $this->placeholder('extraClasses')->set('refreshOnClose');
     $this->placeholder('containerId')->set('products-container');
 ?>
-<div id="products" class="content-footer scroll pl2 pr2">
+<div id="products" class="content-footer scroll pl2 pr2 column_8 full-width">
 </div>
 <div class="footer grid_12">
     <button id="save-btn" class="btn add-products ticon-save"><?php echo $this->translate('Add products and close'); ?></button>
