--- a/system/app/Widgets/Quote/views/item/options.quote.item.phtml
+++ b/system/app/Widgets/Quote/views/item/options.quote.item.phtml
@@ -13,7 +13,7 @@
 	        <?php endif; ?>
         <?php endforeach; ?>
 <?php endif; ?>
-<?php if(Tools_Security_Acl::isAllowed(Tools_Security_Acl::RESOURCE_ADMINPANEL)): ?>
+<?php if(Tools_Security_Acl::isAllowed(Shopping::RESOURCE_STORE_MANAGEMENT)): ?>
     <?php if (isset($currOpts)): ?>
         <a href="javascript:;" data-pheight="560" class="tpopup" data-url="<?php echo $this->websiteUrl; ?>plugin/quote/run/options/co/<?php echo http_build_query($currOpts); ?>/qid/<?php echo $this->quoteId; ?>/pid/<?php echo $this->productId;?>">
             <strong><?php echo $this->translate('Manage options'); ?></strong>
