--- a/system/views/settings.quote.phtml
+++ b/system/views/settings.quote.phtml
@@ -3,7 +3,7 @@
 ?>
 <div id="quote-settings" class="ui-widget clearfix">
     <?php echo $this->form; ?>
-    <input type="hidden" class="<?php echo Tools_System_Tools::CSRF_SECURE_TOKEN;?>" name="<?php echo Tools_System_Tools::CSRF_SECURE_TOKEN;?>" value="<?php echo $this->secureToken;?>" />
+    <input type="hidden" class="quote-secure-token" name="<?php echo Tools_System_Tools::CSRF_SECURE_TOKEN;?>" value="<?php echo $this->secureToken;?>" />
 </div>
 <script type="text/javascript">
 $(document).ready(function(){
@@ -25,7 +25,7 @@ $(document).ready(function(){
                 autoQuote: autoQuote,
                 quoteTemplate: $('#quote-template option:selected').val(),
                 expirationDelay: $('#expiration-delay').val(),
-                secureToken: $('.secureToken').val()
+                secureToken: $('.quote-secure-token').val()
             },
             success: function(responce){
                 smoke.signal('<?php echo $this->translate('Saved');?>');
