--- a/system/app/Widgets/Quote/views/address.quote.phtml
+++ b/system/app/Widgets/Quote/views/address.quote.phtml
@@ -43,6 +43,47 @@
                 $('#<?php echo $this->addressForm->getAttrib('id'); ?> select.state').empty().parent('div').hide();
             <?php endif; ?>
 
+            var mobileMasks = JSON.parse('<?php echo json_encode($this->mobileMasks);?>'),
+                desktopCountryCodeShipping =  $('#shipping-user-address select[name="phonecountrycode"]').val(),
+                desktopCountryCodeBilling =  $('#plugin-quote-quoteform select[name="phonecountrycode"]').val(),
+                desktopMasks = JSON.parse('<?php echo json_encode($this->desktopMasks);?>');
+
+            if (typeof desktopMasks[desktopCountryCodeShipping] !== 'undefined') {
+                $('#shipping-user-address input[name="phone"]').mask(desktopMasks[desktopCountryCodeShipping].mask_value, {autoclear: false});
+            } else {
+                $('#shipping-user-address input[name="phone"]').mask('(999) 999 9999', {autoclear: false});
+            }
+
+            if (typeof desktopMasks[desktopCountryCodeBilling] !== 'undefined') {
+                $('#plugin-quote-quoteform input[name="phone"]').mask(desktopMasks[desktopCountryCodeBilling].mask_value, {autoclear: false});
+            } else {
+                $('#plugin-quote-quoteform input[name="phone"]').mask('(999) 999 9999', {autoclear: false});
+            }
+
+            $(document).on('change', '#shipping-user-address select[name="phonecountrycode"]', function(e) {
+                var countryEl = $(e.currentTarget),
+                    chosenCountryCode = countryEl.val(),
+                    desktopMasks = JSON.parse('<?php echo json_encode($this->desktopMasks);?>');
+
+                if (typeof desktopMasks[chosenCountryCode] !== 'undefined') {
+                    $('#shipping-user-address input[name="phone"]').mask(desktopMasks[chosenCountryCode].mask_value, {autoclear: false});
+                } else {
+                    $('#shipping-user-address input[name="phone"]').mask('(999) 999 9999', {autoclear: false});
+                }
+            });
+
+            $(document).on('change', '#shipping-user-address select[name="phonecountrycode"]', function(e) {
+                var countryEl = $(e.currentTarget),
+                    chosenCountryCode = countryEl.val(),
+                    desktopMasks = JSON.parse('<?php echo json_encode($this->desktopMasks);?>');
+
+                if (typeof desktopMasks[chosenCountryCode] !== 'undefined') {
+                    $('#plugin-quote-quoteform input[name="phone"]').mask(desktopMasks[chosenCountryCode].mask_value, {autoclear: false});
+                } else {
+                    $('#plugin-quote-quoteform input[name="phone"]').mask('(999) 999 9999', {autoclear: false});
+                }
+            });
+
             $(document).on('change', '#<?php echo $this->addressForm->getAttrib('id'); ?> select.country', function(e) {
                 var self = this;
                 $.getJSON($('#website_url').val() + 'api/store/geo/type/state?country=' + $(self).val(), function(response) {
@@ -56,7 +97,8 @@
                         })
                     }
                 });
-            })
+            });
+
         });
     </script>
 <?php endif; ?>
