--- a/system/app/Widgets/Quote/views/form.quote.phtml
+++ b/system/app/Widgets/Quote/views/form.quote.phtml
@@ -6,6 +6,47 @@
             $('#state').empty().parent('div').hide();
         }
 
+        var mobileMasks = JSON.parse('<?php echo json_encode($this->mobileMasks);?>'),
+            desktopCountryCodeShipping =  $('#shipping-user-address select[name="phonecountrycode"]').val(),
+            desktopCountryCodeBilling =  $('#plugin-quote-quoteform select[name="phonecountrycode"]').val(),
+            desktopMasks = JSON.parse('<?php echo json_encode($this->desktopMasks);?>');
+
+        if (typeof desktopMasks[desktopCountryCodeShipping] !== 'undefined') {
+            $('#shipping-user-address input[name="phone"]').mask(desktopMasks[desktopCountryCodeShipping].mask_value, {autoclear: false});
+        } else {
+            $('#shipping-user-address input[name="phone"]').mask('(999) 999 9999', {autoclear: false});
+        }
+
+        if (typeof desktopMasks[desktopCountryCodeBilling] !== 'undefined') {
+            $('#plugin-quote-quoteform input[name="phone"]').mask(desktopMasks[desktopCountryCodeBilling].mask_value, {autoclear: false});
+        } else {
+            $('#plugin-quote-quoteform input[name="phone"]').mask('(999) 999 9999', {autoclear: false});
+        }
+
+        $(document).on('change', '#shipping-user-address select[name="phonecountrycode"]', function(e) {
+            var countryEl = $(e.currentTarget),
+                chosenCountryCode = countryEl.val(),
+                desktopMasks = JSON.parse('<?php echo json_encode($this->desktopMasks);?>');
+
+            if (typeof desktopMasks[chosenCountryCode] !== 'undefined') {
+                $('#shipping-user-address input[name="phone"]').mask(desktopMasks[chosenCountryCode].mask_value, {autoclear: false});
+            } else {
+                $('#shipping-user-address input[name="phone"]').mask('(999) 999 9999', {autoclear: false});
+            }
+        });
+
+        $(document).on('change', '#shipping-user-address select[name="phonecountrycode"]', function(e) {
+            var countryEl = $(e.currentTarget),
+                chosenCountryCode = countryEl.val(),
+                desktopMasks = JSON.parse('<?php echo json_encode($this->desktopMasks);?>');
+
+            if (typeof desktopMasks[chosenCountryCode] !== 'undefined') {
+                $('#plugin-quote-quoteform input[name="phone"]').mask(desktopMasks[chosenCountryCode].mask_value, {autoclear: false});
+            } else {
+                $('#plugin-quote-quoteform input[name="phone"]').mask('(999) 999 9999', {autoclear: false});
+            }
+        });
+
         $(document).on('submit', '#plugin-quote-quoteform', function(e) {
             e.preventDefault();
 
